Yoga_studio_analysis.ipynb

--- a/Yoga_studio_analysis.ipynb
+++ b/Yoga_studio_analysis.ipynb
@@ -169,6 +169,14 @@
     "# A little peek\n",
     "DF.tail()"
    ]
+  },{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Total Class Attendance by Class Name and Start Time \n"
+   ]
   },
   {
    "cell_type": "markdown",
